@@ -398,6 +398,8 @@ main (int argc, char **argv)
 	
 	gtk_main();
 	
+	g_object_unref (program);
+	
 	return 0;
 }
 
