@@ -1,3 +1,15 @@
+2004-11-15  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit-commands.c (gedit_cmd_help_about): updates my email address
+
+	* gedit-file.c (show_loading_dialog): sets skip-taskbar and skip-pager 
+	hints for the "loading" window
+
+	* gedit-print.c (show_printing_dialog): sets skip-taskbar and skip-pager 
+	hints for the "printing" window
+
+	* gedit2.c (main): unrefs program before exiting
+
 2004-11-15  Paolo Borelli  <pborelli@katamail.com>
 
 	* dialogs/gedit-plugin-manager.c: readd plugins info in the about.
